@@ -12,7 +12,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
 
-import javax.persistence.Tuple;
+import jakarta.persistence.Tuple;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -108,8 +108,8 @@ public class RatesDaoTest extends BaseDaoTest {
 
         assertThat(allAverageRates)
                 .hasSize(5);
-        assertThat(allAverageRates.get(0).get("avg_stars", Double.class))
-                .isEqualTo(new Double("9.5"));
+        assertThat(allAverageRates.getFirst().get("avg_stars", Double.class))
+                .isEqualTo(Double.parseDouble("9.5"));
     }
 
 }
